--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @plugin "daisyui" {
   themes: light --default, dark --prefersdark, cupcake, black;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+
 @plugin "daisyui/theme" {
   name: "black";
   default: true;
