--- a/src/Components/Education.css
+++ b/src/Components/Education.css
@@ -1,6 +1,6 @@
 .edubg{
-    background-image: url('../assets/resume-bg-5.png');
+    background-image: url('../assets/resume-bg-6.png');
     background-size:cover;
     background-repeat: no-repeat;
-    background-position: right;
+    background-position: center;
 }
